# aarogya-icu-openenv

./: DockerFile  Dockerfile  README  README.md  app.py  bridge.py  client.py  clinical_audit_report.csv  compare_patients.py  data_pipeline.py  evaluator.py  final_clinical_report.csv  generate_chart.py  generate_report.py  grade_agent.py  inference.py  main.py  master_audit.py  models.py  openenv.yaml  openenv_healthcare.py  patients.csv  pyproject.toml  requirements.txt  server.py  test_agent.py  train.py  train_agent.py  visualize_results.py
server/: app.py
