[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aarogya-icu-openenv"
version = "0.1.0"
description = "ICU Patient Management RL Environment"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.0.0",
    "openenv>=0.1.0",
    "pandas",
    "numpy",
    "requests"
]

[project.scripts]
server = "server.app:main"

[tool.setuptools]
packages = ["server"]