[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aarogya-icu-openenv"
version = "0.1.0"
dependencies = [
    "fastapi",
    "uvicorn",
    "openai",
    "openenv>=0.1.0",
    "pandas",
    "numpy"
]

[project.scripts]
server = "server.app:main"

[tool.setuptools]
packages = ["server"]