[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aarogya-icu-openenv"
version = "0.1.0"
dependencies = [
    "fastapi",
    "uvicorn",
    "openai",
    "openenv>=0.1.0",
    "pandas",
    "numpy",
    "requests"
]

[project.scripts]
# This maps the 'server' command to your main() function
server = "server.app:main"

[tool.setuptools]
packages = ["server"]